test/should_fail/unary_op_1.erl
-module(unary_op_1).

-spec fail(number()) -> boolean().
fail(X) -> -X.

